kubernetes/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surviving-chernarus
  labels:
    name: surviving-chernarus
    app.kubernetes.io/name: surviving-chernarus
    app.kubernetes.io/part-of: chernarus-infrastructure
---
apiVersion: v1
kind: Namespace
metadata:
  name: chernarus-system
  labels:
    name: chernarus-system
    app.kubernetes.io/name: chernarus-system
    app.kubernetes.io/part-of: chernarus-infrastructure
