kubernetes/core/dnsmasq-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dnsmasq
  namespace: chernarus-system
  labels:
    app: dnsmasq
spec:
  selector:
    matchLabels:
      app: dnsmasq
  template:
    metadata:
      labels:
        app: dnsmasq
    spec:
      hostNetwork: true
      dnsPolicy: Default
      containers:
      - name: dnsmasq
        image: jpillora/dnsmasq:latest
        args:
        - --log-facility=-
        - --conf-file=/etc/dnsmasq.d/custom.conf
        volumeMounts:
        - name: config
          mountPath: /etc/dnsmasq.d/custom.conf
          subPath: custom.conf
      volumes:
      - name: config
        configMap:
          name: dnsmasq-config
